tests/test_if/test8.wacc
# if condition type mismatch

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  if (3+3 == 6) && false then
    skip 
  else 
    skip
  fi
end
